@@ -1,7 +1,11 @@
 package sample;
+
 import javafx.application.Application;
+import javafx.event.EventHandler;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
@@ -10,6 +14,13 @@ import java.util.List;
 import java.util.Scanner;
 
 public class Stage2 extends Application {
+
+    public Scene mScene;
+    public Simulator simulator;
+    public Comuna comuna;
+    public StackPane p;
+    public BorderPane borderPane;
+    public Stage _primaryStage;
 
     public static void main(String[] args) {
         launch(args);
@@ -23,30 +34,58 @@ public class Stage2 extends Application {
             System.out.println("Usage: java Stage1 <configurationFile.txt>");
             System.exit(-1);
         }
-        primaryStage.setTitle("Pandemic Graphics Simulator");
-        BorderPane borderPane = new BorderPane();
-        primaryStage.setScene(new Scene(borderPane, 600, 400));
+        _primaryStage = primaryStage;
         SimulatorConfig config = new SimulatorConfig(new Scanner(new File(rawParam.get(0))));
-        Comuna comuna = new Comuna(SimulatorConfig.N, SimulatorConfig.I);
-        Simulator simulator = new Simulator(30,1, comuna, (int)SimulatorConfig.N, (int)SimulatorConfig.I, SimulatorConfig.SPEED, SimulatorConfig.DELTA_THETA, SimulatorConfig.I_TIME, SimulatorConfig.D);
-        simulator.buildPedestrianArray();
-        borderPane.setTop(new SimulatorMenuBar(primaryStage, simulator));
-        //SplitPane splitPane = new SplitPane();
-        //splitPane.setOrientation(Orientation.VERTICAL);
-        //borderPane.setCenter(splitPane);
+        _primaryStage.setTitle("Pandemic Graphics Simulator");
+        borderPane = new BorderPane();
+        mScene = new Scene(borderPane, SimulatorConfig.WIDTH + 50, SimulatorConfig.LENGTH + 50);
 
-        StackPane p = new StackPane();
+
+        _primaryStage.setScene(mScene);
+
+        comuna = new Comuna();
+        simulator = new Simulator(this, mScene, 15,1, comuna, SimulatorConfig.DELTA_T, (int)SimulatorConfig.N, (int)SimulatorConfig.I, SimulatorConfig.SPEED, SimulatorConfig.DELTA_THETA, SimulatorConfig.I_TIME, SimulatorConfig.D);
+        borderPane.setTop(new SimulatorMenuBar(this, mScene, borderPane, simulator));
+
+        mScene.setOnKeyPressed(new EventHandler<KeyEvent>() {
+            @Override
+            public void handle(KeyEvent keyEvent) {
+                if (keyEvent.getCode() == KeyCode.LEFT){
+                    if (simulator.rate == 1){
+                        simulator.rate = 0.5;
+                        simulator.detectAnimationRate();
+                    }
+                    if (simulator.rate == 2){
+                        simulator.rate = 1;
+                        simulator.detectAnimationRate();
+                    }
+                    if (simulator.rate == 4){
+                        simulator.rate = 2;
+                        simulator.detectAnimationRate();
+                    }
+                }
+                if (keyEvent.getCode() == KeyCode.RIGHT){
+                    if (simulator.rate == 2){
+                        simulator.rate = 4;
+                        simulator.detectAnimationRate();
+                    }
+                    if (simulator.rate == 1){
+                        simulator.rate = 2;
+                        simulator.detectAnimationRate();
+                    }
+                    if (simulator.rate == 0.5){
+                        simulator.rate = 1;
+                        simulator.detectAnimationRate();
+                    }
+                }
+            }
+        });
+
+        p = new StackPane();
         p.getChildren().add(comuna.getView());
-        StackPane.setAlignment(comuna.getView(), Pos.CENTER);
-        //Pane pane = new Pane();
-        //pane.getChildren().add(comuna.getView());
+        p.setAlignment(comuna.getView(), Pos.CENTER);
 
         borderPane.setCenter(p);
-        //borderPane.setCenter(pane);
-
-        //splitPane.getItems().add(pane);
-        primaryStage.show();
+        _primaryStage.show();
     }
 }
-
-//javac --module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml *.java
